...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/weekDayHeader"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="4dp">

        <TextView
            android:id="@+id/tvMonthLabel"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:lineSpacingExtra="1dp"
            android:text="8&#10;月"
            android:textColor="@color/text_secondary"
...
